[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "commitizen>=4.13.9",
  "cz-path>=0.0.6",
  "mypy>=1.19.1",
  "ruff>=0.15.7",
  "types-requests>=2.32.4.20260107",
  "types-yt-dlp>=2026.3.17.20260318",
]
docs = [
  "autodoc-pydantic>=2.2.0",
  "doc8>=2.0.0",
  "docutils<0.22",
  "enum-tools[sphinx]>=0.13.0",
  "esbonio>=1.1.0",
  "numpydoc>=1.10.0",
  "restructuredtext-lint>=2.0.2",
  "sphinx-click>=6.2.0",
  "sphinx-datatables>=1.0.0",
  "sphinx-immaterial>=0.13.9",
  "sphinx>=9.1.0; python_version >= \"3.13\"",
  "tomlkit>=0.14.0",
]
tests = [
  "coveralls>=4.1.0",
  "mock>=5.2.0",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.0.2",
]

[project]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "bascom>=0.1.2",
  "click>=8.3.1",
  "requests>=2.32.5",
  "typing-extensions>=4.15.0",
  "yt-dlp-utils>=0.0.8",
]
description = "Save Patreon content you have access to."
keywords = ["command line", "patreon"]
license = "MIT"
name = "patreon-archiver"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "0.1.6"

[[project.authors]]
email = "audvare@gmail.com"
name = "Andrew Udvare"

[project.scripts]
patreon-archiver = "patreon_archiver.main:main"

[project.urls]
Issues = "https://github.com/Tatsh/patreon-archiver/issues"
documentation = "https://patreon-archiver.readthedocs.org"
homepage = "https://tatsh.github.io/patreon-archiver/"
repository = "https://github.com/Tatsh/patreon-archiver"

[tool.commitizen]
name = "cz_path"
remove_path_prefixes = ["include", "patreon_archiver", "src"]
tag_format = "v$version"
version_files = [
  ".wiswa.jsonnet",
  "CITATION.cff",
  "README.md",
  "docs/badges.rst",
  "docs/index.rst",
  "man/patreon-archiver.1",
  "package.json",
  "patreon_archiver/__init__.py",
  "snapcraft.yaml",
]
version_provider = "pep621"

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
omit = ["__main__.py", "conftest.py", "tests.py", "tests/*/test_*.py", "tests/test_*.py"]
show_missing = true

[tool.coverage.run]
branch = true
omit = ["__main__.py", "conftest.py", "tests.py", "tests/*/test_*.py", "tests/test_*.py"]

[tool.doc8]
max-line-length = 100

[tool.mypy]
cache_dir = "~/.cache/mypy"
explicit_package_bases = true
platform = "linux"
python_version = "3.12"
show_column_numbers = true
strict = true
strict_optional = true
warn_unreachable = true

[tool.pyright]
deprecateTypingAliases = true
enableExperimentalFeatures = true
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
include = ["./patreon_archiver", "./tests"]
pythonPlatform = "Linux"
pythonVersion = "3.12"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImportCycles = "error"
reportMissingModuleSource = "error"
reportPropertyTypeMismatch = "error"
reportUnnecessaryTypeIgnoreComment = "none"
typeCheckingMode = "off"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
mock_use_standalone_module = true
norecursedirs = ["node_modules"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
force-exclude = true
line-length = 100
namespace-packages = ["docs", "tests"]
target-version = "py312"
unsafe-fixes = true

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
preview = true
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
  "ANN401",
  "COM812",
  "CPY001",
  "D201",
  "D203",
  "D204",
  "D212",
  "DOC201",
  "N818",
  "Q000",
  "Q003",
  "S101",
  "S404",
  "S603",
  "TD002",
  "UP046",
  "UP047",
]
preview = true

[tool.ruff.lint.flake8-builtins]
allowed-modules = ["types", "typing"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
from-first = true
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "local-folder"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*"]

[tool.ruff.lint.per-file-ignores]
"main.py" = ["PLR0913"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 20
max-locals = 20
max-positional-args = 15
max-public-methods = 30
max-returns = 10
max-statements = 100

[tool.uv]
default-groups = ["dev"]
